--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1322,3 +1322,8 @@ textarea, input[type="text"]{
 .textfild{
     width: 100%;
 }
+
+
+.site-footer-bottom-section-4{
+    padding-top: 25px !important;
+}
