--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1314,10 +1314,10 @@ input[type="search"]::-webkit-search-cancel-button {
     color: #008000;
 }
 
-textarea, input[type="text"]{
+/* textarea, input[type="text"]{
     border: 0.1px #ffd186 solid !important;
     box-shadow: inset 5px 0px 0px #ffd186 !important;
-}
+} */
 
 .textfild{
     width: 100%;
@@ -1328,6 +1328,7 @@ textarea, input[type="text"]{
     padding-top: 25px !important;
 }
 
-.wp-block-kadence-image{
-    display: block !important;
+
+.fa-minus:before ,.fa-plus:before{
+   display: none !important;
 }
