--- a/src/css/satoshi.css
+++ b/src/css/satoshi.css
@@ -20,7 +20,7 @@
  *
 */
 
-@font-face {
+/* @font-face {
     font-family: "Satoshi";
     src: url("../fonts/Satoshi-Light.woff2") format("woff2"),
     url("../fonts/Satoshi-Light.woff") format("woff"),
@@ -28,9 +28,9 @@
     font-weight: 300;
     font-display: swap;
     font-style: normal;
-}
+} */
 
-@font-face {
+/* @font-face {
     font-family: "Satoshi";
     src: url("../fonts/Satoshi-LightItalic.woff2") format("woff2"),
     url("../fonts/Satoshi-LightItalic.woff") format("woff"),
@@ -38,8 +38,8 @@
     font-weight: 300;
     font-display: swap;
     font-style: italic;
-}
-
+} */
+/* 
 @font-face {
     font-family: "Satoshi";
     src: url("../fonts/Satoshi-Regular.woff2") format("woff2"),
@@ -121,7 +121,7 @@
 }
 
 
-
+ */
 
 
 
