--- a/src/css/satoshi.css
+++ b/src/css/satoshi.css
@@ -1221,10 +1221,10 @@ iframe{
     padding: 0px 20px !important;
 
 }
-.setstyle ul {
+/* .setstyle ul {
     padding: 20px 60px !important;
 
-}
+} */
 .setstyle ol {
     padding: 20px 20px !important;
 
@@ -1232,3 +1232,7 @@ iframe{
 /* .setstyle h2{
     margin: 20px 0px;
 } */
+
+.wp-block-kadence-column > .kt-inside-inner-col > .wp-block-image > img{
+    width: 100%;
+}
