--- a/public/scrorsStyle.css
+++ b/public/scrorsStyle.css
@@ -90,7 +90,7 @@ body .site-branding {
 
 .top-button .kt-row-layout-inner:hover a img{
 /* filter: invert(43%) sepia(53%) saturate(3775%) hue-rotate(126deg) brightness(60%) contrast(101%); */
-	filter:invert(43%) sepia(53%) saturate(3775%) hue-rotate(106deg) brightness(65%) contrast(101%);
+	/* filter:invert(43%) sepia(53%) saturate(3775%) hue-rotate(106deg) brightness(65%) contrast(101%); */
 }
 
 
