--- a/src/css/satoshi.css
+++ b/src/css/satoshi.css
@@ -1236,3 +1236,57 @@ iframe{
 .wp-block-kadence-column > .kt-inside-inner-col > .wp-block-image > img{
     width: 100%;
 }
+
+
+.ripple{
+    position:relative;
+    /* margin:150px auto; */
+    /* width:50px; */
+    /* height:50px; */
+}
+
+.rippledot:before{
+    content:' ';
+    position: absolute;
+    z-index:2;
+    left:0;
+    top:0;
+    width:5px;
+    height:5px; 
+    background-color: #19892c;
+    border-radius: 50%;
+  }
+  
+  .rippledot:after {
+    content:' ';
+    position: absolute;
+    z-index:1;
+    width:5px;
+    height:5px; 
+    background-color: #19892c;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0,0,0,.3) inset;
+    -webkit-animation-name:'ripple';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+    -webkit-animation-duration: 1s;/*动画持续时间*/
+    -webkit-animation-timing-function: ease; /*动画频率，和transition-timing-function是一样的*/
+    -webkit-animation-delay: 0s;/*动画延迟时间*/
+    -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
+    -webkit-animation-direction: normal;/*定义动画方式*/
+  }
+  
+  @keyframes ripple {
+     0% {
+      left:5px;
+      top:5px;
+      opcity:75;
+      width:0;
+      height:0;
+    }
+    100% {
+      left:-13px;
+      top:-15px;
+      opacity: 0;
+      width:30px;
+      height:30px;
+    }
+  }
