--- a/src/css/satoshi.css
+++ b/src/css/satoshi.css
@@ -1234,7 +1234,7 @@ iframe{
 } */
 
 .wp-block-kadence-column > .kt-inside-inner-col > .wp-block-image > img{
-    width: 100%;
+    /* width: 100%; */
 }
 
 
