--- a/src/css/satoshi.css
+++ b/src/css/satoshi.css
@@ -1237,6 +1237,10 @@ iframe{
     /* width: 100%; */
 }
 
+#kt-layout-id_bb1d3f-a7 > div{
+    margin-top: 53px !important;
+}
+
 
 .ripple{
     position:relative;
