--- a/public/bootstrap-front.css
+++ b/public/bootstrap-front.css
@@ -21,7 +21,7 @@
   .wpsm_panel-title {
 	margin-top: 0;
 	margin-bottom: 0;
-	font-size: 16px;
+	/* font-size: 16px; */
 	color: inherit;
   }
   .wpsm_panel-title > a,
