--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1561,6 +1561,8 @@ body .is-layout-flex > * {
   padding-bottom: 0px;
 }
 
+
+
 /* <style id='kadence-blocks-icon-inline-css'> */
 .kt-svg-style-stacked .kt-svg-icon {
   border: 0px solid #444444;
@@ -1876,7 +1878,7 @@ body .is-layout-flex > * {
   /* background-color:  !important; */
   color: #0e0e0e !important;
   border-top-color: #ffffff !important;
-  font-size: 16px !important;
+  /* font-size: 16px !important; */
   font-family: 0 !important;
   overflow: hidden;
   border: 2px solid transparent !important;
@@ -2153,9 +2155,10 @@ optgroup,
 textarea {
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.6;
-  font-family: var(--global-body-font-family);
+  /* font-family: var(--global-body-font-family); */
+  
   color: var(--global-palette4);
 }
 
@@ -2215,7 +2218,7 @@ h5 {
 h6 {
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.5;
   color: var(--global-palette5);
 }
