--- a/src/css/satoshi.css
+++ b/src/css/satoshi.css
@@ -1370,3 +1370,7 @@ div[class="wp-block-kadence-column inner-column-2 kadence-column_36d3ae-1d"]{
     padding: 0px 0 0px 0 !important;
 }
 }
+
+button{
+    padding: 10px !important;
+}
