--- a/src/css/satoshi.css
+++ b/src/css/satoshi.css
@@ -1503,8 +1503,10 @@ div[class="wp-block-kadence-column inner-column-2 kadence-column_36d3ae-1d"]{
     }
 }
 
-.wp-block-kadence-column > .kt-inside-inner-col > .wp-block-image > img{
-    width: 100% !important;
+@media(min-width: 600px){
+    .wp-block-kadence-column > .kt-inside-inner-col > .wp-block-image > img{
+        width: 100% !important;
+    }
 }
 /* @media(min-width: 1130px){
     .fServImages  a[class="wp-block-button__link has-theme-palette-2-background-color has-background wp-element-button"]{
