--- a/public/scrorsStyle.css
+++ b/public/scrorsStyle.css
@@ -1114,3 +1114,31 @@ padding-bottom: 10px;
 .parenlogonewbrandmob img{
   margin-bottom: 20px !important;
 }
+
+
+.lenderlogo img:hover{   
+   transform: scale(1.1);
+}
+
+.lenderlogo{
+  width: 195px;
+  height: 70px;
+
+  display: flex;
+    align-items: center;
+
+}
+
+.Parentlenderlogo{   
+   display: flex;
+  flex-flow: wrap;
+  gap: 50px 24px;
+  width: 100%;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+
+  margin-top: 60px;
+
+}
