--- a/public/scrorsStyle.css
+++ b/public/scrorsStyle.css
@@ -1149,3 +1149,22 @@ padding-bottom: 10px;
 
   }
 }
+
+@media(min-width: 1300px) and (max-width: 1700px){
+.lenderlogo {
+  width: 261px !important;
+  height: 93px !important;
+}
+}
+
+@media(min-width: 1701px) and (max-width: 2000px){
+  .lenderlogo {
+    width: 301px !important;
+    height: 93px !important;
+  }
+  }@media(min-width: 2001px) and (max-width: 4000px){
+    .lenderlogo {
+      width: 450px !important;
+      height: 93px !important;
+    }
+    }
