--- a/public/scrorsStyle.css
+++ b/public/scrorsStyle.css
@@ -1139,7 +1139,9 @@ padding-bottom: 10px;
   -webkit-box-align: center;
   align-items: center;
 
-  margin-top: 60px;
+  margin-top: 100px;
+  margin-bottom: 150px;
+
 
 }
 
