--- a/public/scrorsStyle.css
+++ b/public/scrorsStyle.css
@@ -1140,7 +1140,7 @@ padding-bottom: 10px;
   align-items: center;
 
   margin-top: 100px;
-  margin-bottom: 150px;
+  margin-bottom: 80px;
 
 
 }
@@ -1157,8 +1157,39 @@ padding-bottom: 10px;
   .Parentlenderlogo{   
 
    margin-bottom: 62px !important;
- 
- 
+ padding: 15px !important;
+ gap: 20px 18px !important;
+ }
+ .reputheadmob{
+  padding: 0px 25px !important;
+
+ }
+ .image1,
+ .image2,
+ .image3,
+ .image4,
+ .image5,
+ .image6,
+ .image7,
+ .image8,
+ .image9,
+ .image10,
+ .image11,
+ .image12,
+ .image13,
+ .image14,
+ .image15,
+ .image16,
+ .image17,
+ .image18,
+ .image19,
+ .image20,
+ .image21,
+ .image22
+
+ {
+  width: 80% !important;
+
  }
 }
 
@@ -1174,9 +1205,16 @@ padding-bottom: 10px;
     width: 301px !important;
     height: 93px !important;
   }
-  }@media(min-width: 2001px) and (max-width: 4000px){
+  }@media(min-width: 2001px) and (max-width: 2200px){
     .lenderlogo {
       width: 450px !important;
       height: 93px !important;
     }
     }
+
+    @media(min-width: 2201px) and (max-width: 3000px){
+      .lenderlogo {
+        width: 600px !important;
+        height: 93px !important;
+      }
+      }
