--- a/public/kadenceAssetGlobal.css
+++ b/public/kadenceAssetGlobal.css
@@ -546,7 +546,7 @@ textarea:focus {
     color: var(--global-palette3);
     border-color: var(--global-palette6);
     outline: 0;
-    box-shadow: 0px 5px 15px -7px rgba(0, 0, 0, 0.1)
+    /* box-shadow: 0px 5px 15px -7px rgba(0, 0, 0, 0.1) */
 }
 
 select {
